--- a/src/main/resources/templates/verfication_code.html
+++ b/src/main/resources/templates/verfication_code.html
@@ -1,6 +1,8 @@
 <html>
     <header>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+        <script src="https://apis.google.com/js/api:client.js"></script>
         <title>welcome to magic mirror</title>
         <style type="text/css">
             .field{margin: 5% 0px 0px 0px;}
@@ -58,7 +60,7 @@
           </nav>
           <div class="columns is-12" style="text-align: center;">
             <div class="column">
-              <h4 class="title">create new account</h4>
+              
               <div class="columns is-12">
                 <div class="column is-2"></div>
                 
@@ -66,58 +68,29 @@
                     <div class="card block">
                 
                         <div class="card-content">
-                            <form method="POST" th:action="@{/registeruser}" th:object="${user}">
-                                <div class="field">
-                                    <p class="control has-icons-left has-icons-right">
-                                      <input class="input" type="name" th:field="*{name}" placeholder="Name">
-                                      <span class="icon is-small is-left">
-                                        <i class="fas fa-envelope"></i>
-                                      </span>
-                                      <span class="icon is-small is-right">
-                                        <i class="fas fa-check"></i>
-                                      </span>
-                                    </p>
-                                  </div>
+                          <div>
+                            <h3 class="subtitle is-3">
+                              - enter the code -
+                            </h3>
+                          </div>
+                            <form th:action="@{/occupid}" method="get">
+                                
+                                  
                                   <div class="field">
                                     <p class="control has-icons-left">
-                                      <input class="input" type="email" th:field="*{email}" placeholder="Email">
-                                      <span class="icon is-small is-left">
-                                        <i class="fas fa-lock"></i>
-                                      </span>
-                                    </p>
-                                  </div>
-                                  <div class="field">
-                                    <p class="control has-icons-left">
-                                      <input class="input" type="password" th:field="*{password}" placeholder="Password">
+                                      <input class="input" type="text" name="code" placeholder="verfication code">
                                       <span class="icon is-small is-left">
                                         <i class="fas fa-lock"></i>
                                       </span>
                                     </p>
                                   </div>
                                   <div class="control">
-                                    <button type="submit" class="button is-link" style="width: 100%; background-color: #FF5722;"><h4 class="subtitle is-4" style="color: white;">create account</h4></button>
-                                   
-                                    </div>
-                                  </form>
-                                  <div>
-                                    <h5 class="subtitle is-5" style="opacity: 0.6;"> -- or continue with -- </h5>
+                                    <button type="submit" class="button is-link" style="width: 100%; background-color: #FF5722;"><h4 class="subtitle is-4" style="color: white;">OK</h4></button>
                                   </div>
-                                  <div>
-                                    <div id="gSignInWrapper">
-                                        <a th:href="@{/login/oauth2/authorization/google}">
-                                        <div id="customBtn" class="customGPlusSignIn">
-                                          <img src="https://maxcdn.icons8.com/Share/icon/Logos/google_logo1600.png" style="width: 10%; height: 1%;"/>
-                                          <span class="buttonText">Google</span>
-                                        </div>
-                                        </a>
-                                      </div>
-                                  </div>
-                            
+                                 
+                            </form>
                           </div>
                       
-                          <div class="content">
-
-                          </div>
                         </div>
                       </div>
                 </div>
