-- add oauth to web pages

--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -47,6 +47,13 @@
         <nav class="navbar" style="background-color: #FF5722;">
             
               <div class="navbar-start">
+                <div class="navbar-item">
+                <form action="/verfication_code">
+                  <div class="control">
+                    <button class="button is-primary" style="background-color: #FF5722;">verify code</button>
+                  </div>
+                </form>
+                </div>
               </div>
               <div class="my-navbar-center">
                 <div class="navbar-item">
