-- fix ui errors

--- a/src/main/resources/templates/add_event.html
+++ b/src/main/resources/templates/add_event.html
@@ -108,7 +108,7 @@
                                     </div>
                                   </form>
                                  
-                                 
+                                 <p th:text="${error}"></p>
                             
                           </div>
                       
