--- a/src/main/resources/templates/verfication_code.html
+++ b/src/main/resources/templates/verfication_code.html
@@ -73,7 +73,7 @@
                               - enter the code -
                             </h3>
                           </div>
-                            <form th:action="@{/occupid}" method="get">
+                            <form th:action="@{/occupid}" method="post">
                                 
                                   
                                   <div class="field">
