--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,1 +1,73 @@
-test me again
+<html>
+    <header>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+        <script src="https://apis.google.com/js/api:client.js"></script>
+        <title>welcome to magic mirror</title>
+        <style type="text/css">
+            .field{margin: 5% 0px 0px 0px;}
+            .columns{padding: 20px;}
+            #customBtn {
+              display: inline-block;
+              background: white;
+              color: #444;
+              width: 190px;
+              border-radius: 5px;
+              border: thin solid #888;
+              box-shadow: 1px 1px 1px grey;
+              white-space: nowrap;
+            }
+            #customBtn:hover {
+              cursor: pointer;
+            }
+            span.label {
+              font-family: serif;
+              font-weight: normal;
+            }
+            span.icon {
+              background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
+              display: inline-block;
+              vertical-align: middle;
+              width: 42px;
+              height: 42px;
+            }
+            span.buttonText {
+              display: inline-block;
+              vertical-align: middle;
+              padding-left: 42px;
+              padding-right: 42px;
+              font-size: 14px;
+              font-weight: bold;
+              /* Use the Roboto font that is loaded in the <head> */
+              font-family: 'Roboto', sans-serif;
+            }
+          </style>
+    </header>
+    <body>
+        <nav class="navbar" style="background-color: #FF5722;">
+            
+              <div class="navbar-start">
+               
+              </div>
+              <div class="my-navbar-center">
+                <div class="navbar-item">
+                    <h3 class="title" style="color: white;">Magic Mirror</h3>
+                </div>
+              </div>
+              <div class="navbar-end">
+              </div>
+            
+          </nav>
+          <section class="section" style="text-align: center;"><h3 class="subtitle is-3"><strong>error</strong></h3></section>
+          <div class="columns is-multiline" style="text-align: center;">
+              
+            <p th:text="${error}">something went wrong</p>
+            <a th:href="@{/}">go back</a>
+              
+                
+
+                
+              </div>
+           
+    </body>
+</html>
