--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,120 +1,139 @@
 <html>
-    <header>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-        <script src="https://apis.google.com/js/api:client.js"></script>
-        <title>welcome to magic mirror</title>
-        <style type="text/css">
-            .field{margin: 5% 0px 0px 0px;}
-            #customBtn {
-              display: inline-block;
-              background: white;
-              color: #444;
-              width: 190px;
-              border-radius: 5px;
-              border: thin solid #888;
-              box-shadow: 1px 1px 1px grey;
-              white-space: nowrap;
-            }
-            #customBtn:hover {
-              cursor: pointer;
-            }
-            span.label {
-              font-family: serif;
-              font-weight: normal;
-            }
-            span.icon {
-              background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
-              display: inline-block;
-              vertical-align: middle;
-              width: 42px;
-              height: 42px;
-            }
-            span.buttonText {
-              display: inline-block;
-              vertical-align: middle;
-              padding-left: 42px;
-              padding-right: 42px;
-              font-size: 14px;
-              font-weight: bold;
-              /* Use the Roboto font that is loaded in the <head> */
-              font-family: 'Roboto', sans-serif;
-            }
-          </style>
-    </header>
-    <body>
-        <nav class="navbar" style="background-color: #FF5722;">
-            <div class="navbar-brand">
-            </div>
-            <div id="my-navbar-menu" class="navbar-menu">
-              <div class="navbar-start">
-              </div>
-              <div class="my-navbar-center">
-                <div class="navbar-item">
-                    <h3 class="title" style="color: white;">Magic Mirror</h3>
-                </div>
-              </div>
-              <div class="navbar-end">
-              </div>
-            </div>
-          </nav>
-          <div class="columns is-12" style="text-align: center;">
-            <div class="column">
-              <h4 class="title">Sign in</h4>
-              <div class="columns is-12">
-                <div class="column is-2"></div>
-                
-                <div class="column is-8">
-                    <div class="card block">
-                
-                        <div class="card-content">
-                            <form method="post" th:action="@{/process_register}" th:object="${user}" >
-                                
-                                  <div class="field">
-                                    <p class="control has-icons-left">
-                                      <input class="input" th:field="*{email}" type="email" placeholder="Email">
-                                      <span class="icon is-small is-left">
-                                        <i class="fas fa-lock"></i>
-                                      </span>
-                                    </p>
-                                  </div>
-                                  <div class="field">
-                                    <p class="control has-icons-left">
-                                      <input class="input" th:field="*{password}" type="password" placeholder="Password">
-                                      <span class="icon is-small is-left">
-                                        <i class="fas fa-lock"></i>
-                                      </span>
-                                    </p>
-                                  </div>
-                                  <div class="control">
-                                    <button type="submit" class="button is-link" style="width: 100%; background-color: #FF5722;"><h4 class="subtitle is-4" style="color: white;">Sign in</h4></button>
-                                  </div>
-                                  <div>
-                                    <h5 class="subtitle is-5" style="opacity: 0.6;"> -- or continue with -- </h5>
-                                  </div>
-                                  <div>
-                                    <div id="gSignInWrapper">
-                                      <a th:href="@{/oauth2/authorization/google}">
-                                      <div id="customBtn" class="customGPlusSignIn">
-                                        <img src="https://maxcdn.icons8.com/Share/icon/Logos/google_logo1600.png" style="width: 10%; height: 1%;"/>
-                                        <span class="buttonText">Google</span>
-                                      </div>
-                                      </a>
-                                    </div>
-                                  </div>
-                            </form>
-                          </div>
-                      
-                          <div class="content">
+<header>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+  <script src="https://apis.google.com/js/api:client.js"></script>
+  <title>welcome to magic mirror</title>
+  <style type="text/css">
+    .field {
+      margin: 5% 0px 0px 0px;
+    }
 
-                          </div>
-                        </div>
+    #customBtn {
+      display: inline-block;
+      background: white;
+      color: #444;
+      width: 190px;
+      border-radius: 5px;
+      border: thin solid #888;
+      box-shadow: 1px 1px 1px grey;
+      white-space: nowrap;
+    }
+
+    #customBtn:hover {
+      cursor: pointer;
+    }
+
+    span.label {
+      font-family: serif;
+      font-weight: normal;
+    }
+
+    span.icon {
+      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
+      display: inline-block;
+      vertical-align: middle;
+      width: 42px;
+      height: 42px;
+    }
+
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 42px;
+      padding-right: 42px;
+      font-size: 14px;
+      font-weight: bold;
+      /* Use the Roboto font that is loaded in the <head> */
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
+</header>
+
+<body>
+  <nav class="navbar" style="background-color: #FF5722;">
+    <div class="navbar-brand">
+    </div>
+    <div id="my-navbar-menu" class="navbar-menu">
+      <div class="navbar-start">
+      </div>
+      <div class="my-navbar-center">
+        <div class="navbar-item">
+          <h3 class="title" style="color: white;">Magic Mirror</h3>
+        </div>
+      </div>
+      <div class="navbar-end">
+      </div>
+    </div>
+  </nav>
+  <div class="columns is-12" style="text-align: center;">
+    <div class="column">
+      <h4 class="title">Sign in</h4>
+      <div class="columns is-12">
+        <div class="column is-2"></div>
+
+        <div class="column is-8">
+          <div class="card block">
+
+            <div class="card-content">
+              <form method="post" th:action="@{/login_process}" th:object="${user}">
+
+                <div class="field">
+                  <p class="control has-icons-left">
+                    <input class="input" th:field="*{email}" type="email" placeholder="Email">
+                    <span class="icon is-small is-left">
+                      <i class="fas fa-lock"></i>
+                    </span>
+                  </p>
+                </div>
+                <div class="field">
+                  <p class="control has-icons-left">
+                    <input class="input" th:field="*{password}" type="password" placeholder="Password">
+                    <span class="icon is-small is-left">
+                      <i class="fas fa-lock"></i>
+                    </span>
+                  </p>
+                </div>
+                <div class="control">
+                  <button type="submit" class="button is-link" style="width: 100%; background-color: #FF5722;">
+                    <h4 class="subtitle is-4" style="color: white;">Sign in</h4>
+                  </button>
+                </div>
+                <div>
+                  <h5 class="subtitle is-5" style="opacity: 0.6;"> -- or continue with -- </h5>
+                </div>
+                <div>
+                  <div id="gSignInWrapper">
+                    <a th:href="@{/oauth2/authorization/google}">
+                      <div id="customBtn" class="customGPlusSignIn">
+                        <img src="https://maxcdn.icons8.com/Share/icon/Logos/google_logo1600.png"
+                          style="width: 10%; height: 1%;" />
+                        <span class="buttonText">Google</span>
                       </div>
+                    </a>
+                  </div>
                 </div>
+              </form>
+            </div>
 
-                <div class="column is-2"></div>
-              </div>
+            <div class="content">
+
             </div>
           </div>
-    </body>
+          <div class="control">
+            <a th:href="@{/}">
+              <button type="button" class="button is-link" style="width: 100%; background-color: #FF5722;">
+                <h4 class="subtitle is-4" style="color: white;">Sign in</h4>
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="column is-2"></div>
+    </div>
+  </div>
+  </div>
+</body>
+
 </html>
