--- a/src/main/resources/templates/verfication_code.html
+++ b/src/main/resources/templates/verfication_code.html
@@ -92,6 +92,7 @@
                           </div>
                       
                         </div>
+                        <p th:text="${codeError}"></p>
                       </div>
                 </div>
 
