--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,56 +1,60 @@
 <html>
-<header>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-  <script src="https://apis.google.com/js/api:client.js"></script>
-  <title>welcome to magic mirror</title>
-  <style type="text/css">
-    .field {
-      margin: 5% 0px 0px 0px;
-    }
 
-    #customBtn {
-      display: inline-block;
-      background: white;
-      color: #444;
-      width: 190px;
-      border-radius: 5px;
-      border: thin solid #888;
-      box-shadow: 1px 1px 1px grey;
-      white-space: nowrap;
-    }
-
-    #customBtn:hover {
-      cursor: pointer;
-    }
-
-    span.label {
-      font-family: serif;
-      font-weight: normal;
-    }
-
-    span.icon {
-      background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
-      display: inline-block;
-      vertical-align: middle;
-      width: 42px;
-      height: 42px;
-    }
-
-    span.buttonText {
-      display: inline-block;
-      vertical-align: middle;
-      padding-left: 42px;
-      padding-right: 42px;
-      font-size: 14px;
-      font-weight: bold;
-      /* Use the Roboto font that is loaded in the <head> */
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
-</header>
+<head></head>
 
 <body>
+  <header>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <script
+      src="https://apis.google.com/_/scs/apps-static/_/js/k=oz.gapi.en.RrjSsKk8Szw.O/m=client/rt=j/sv=1/d=1/ed=1/am=AQ/rs=AGLTcCPwd_oodKkRT_hYRO1I-9xRcQV4oQ/cb=gapi.loaded_0"
+      async=""></script>
+    <script src="https://apis.google.com/js/api:client.js" gapi_processed="true"></script>
+    <title>welcome to magic mirror</title>
+    <style type="text/css">
+      .field {
+        margin: 5% 0px 0px 0px;
+      }
+
+      #customBtn {
+        display: inline-block;
+        background: white;
+        color: #444;
+        width: 190px;
+        white-space: nowrap;
+      }
+
+      #customBtn:hover {
+        cursor: pointer;
+      }
+
+      span.label {
+        font-family: serif;
+        font-weight: normal;
+      }
+
+      span.icon {
+        background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
+        display: inline-block;
+        vertical-align: middle;
+        width: 42px;
+        height: 42px;
+      }
+
+      span.buttonText {
+        display: inline-block;
+        vertical-align: middle;
+        padding-left: 42px;
+        padding-right: 42px;
+        font-size: 14px;
+        font-weight: bold;
+        /* Use the Roboto font that is loaded in the <head> */
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
+  </header>
+
+
   <nav class="navbar" style="background-color: #FF5722;">
     <div class="navbar-brand">
     </div>
@@ -103,14 +107,18 @@
                   <h5 class="subtitle is-5" style="opacity: 0.6;"> -- or continue with -- </h5>
                 </div>
                 <div>
+
+
                   <div id="gSignInWrapper">
-                    <a th:href="@{/oauth2/authorization/google}">
-                      <div id="customBtn" class="customGPlusSignIn">
+                    <button id="gSignInWrapper" onclick="location.href='oauth2/authorization/google'" type="button"
+                      style="background: white;">
+                      <div id="customBtn" class="customGPlusSignIn"
+                        style="background: transparent; width: 117px; height: 25px; border-color: transparent;">
                         <img src="https://maxcdn.icons8.com/Share/icon/Logos/google_logo1600.png"
-                          style="width: 10%; height: 1%;" />
-                        <span class="buttonText">Google</span>
+                          style="width: 10%;height: 49%;">
+                        <span class="">Google</span>
                       </div>
-                    </a>
+                    </button>
                   </div>
                 </div>
               </form>
@@ -123,7 +131,7 @@
           <div class="control">
             <a th:href="@{/}">
               <button type="button" class="button is-link" style="width: 100%; background-color: #FF5722;">
-                <h4 class="subtitle is-4" style="color: white;">Sign in</h4>
+                <h4 class="subtitle is-4" style="color: white;">create account</h4>
               </button>
             </a>
           </div>
@@ -133,7 +141,9 @@
       <div class="column is-2"></div>
     </div>
   </div>
-  </div>
+
+
+
 </body>
 
 </html>
