--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -48,16 +48,25 @@
             
               <div class="navbar-start">
                 <div class="navbar-item">
+                <form action="/linkMirror">
+                  <div class="control">
+                    <button class="button is-primary" style="background-color: #FF5722;">link mirror</button>
+                  </div>
+                </form>
+                </div>
+              </div>
+              <!-- <div class="navbar-start">
+                <div class="navbar-item">
                 <form action="/verfication_code">
                   <div class="control">
                     <button class="button is-primary" style="background-color: #FF5722;">verify code</button>
                   </div>
                 </form>
                 </div>
-              </div>
+              </div> -->
               <div class="my-navbar-center">
                 <div class="navbar-item">
-                    <h3 class="title" style="color: white;">Magic Mirror</h3>
+                    <h3 class="title" style="color: white;">Magic Mirror123</h3>
                 </div>
               </div>
               <div class="navbar-end">
